[package]
name = "model-script-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "model-script"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
bevy = "0.8"
bevy_egui = "0.16"
smooth-bevy-cameras = "0.5.0"
path-absolutize = "3.0.14"
rfd = "0.10.0"
model-script = { path = "../model_script" }
stl_io = "0.6.0"
notify = "5.0.0-pre.15"
bevy_polyline = "0.3.0"