[package]
name = "modelrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
path-absolutize = "3"
opencascade = { path = "../opencascade" }