[package]
name = "opencascade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1"
opencascade-sys = { git = "https://github.com/dschroer/opencascade-rs", branch="feat/brep" }
#opencascade-sys = { path = "../../opencascade-rs/crates/opencascade-sys" }
stl_io = "0.6.0"
