[package]
name = "dslcad"
version = "0.1.0"
edition = "2021"
default-run = "dslcad"

[dependencies]
clap = { version = "4.4.2", features = ["derive"]}
logos = "0.12.1"
serde = "1.0"
thiserror = "1.0.38"
opencascade = { path = "../opencascade" }
persistence = { path = "../persistence" }
indexmap = "2.0.0"
stl_io = "0.7.0"
proc-macro2 = "1.0.66"

notify = { version = "6.0.1", optional = true }
preview = { path = "../preview", optional = true  }

[dev-dependencies]
walkdir = "2"

[features]
default = ["preview"]
preview = ["dep:preview", "dep:notify"]
