[package]
name = "dslcad"
version = "0.0.3"
edition = "2021"
default-run = "dslcad"

[dependencies]
clap = { version = "4.4.2", features = ["derive"]}
logos = "0.12.1"
serde = "1.0"
thiserror = "1.0.38"
dslcad-occt = { path = "../dslcad_occt" }
dslcad-storage = { path = "../dslcad_storage" }
indexmap = "2.0.0"
stl_io = "0.7.0"
proc-macro2 = "1.0.66"
log = "0.4.20"
env_logger = "0.10.0"

notify = { version = "6.0.1", optional = true }
dslcad-viewer = { path = "../dslcad_viewer", optional = true  }
rayon = { version = "1.8.1", optional = true  }

[dev-dependencies]
walkdir = "2"

[features]
default = ["preview", "rayon"]
preview = ["dep:dslcad-viewer", "dep:notify"]
rayon = ["dep:rayon"]
