[package]
name = "dslcad_app"
version = "0.1.0"
edition = "2021"
default-run = "dslcad"

[[bin]]
name = "dslcad"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
bevy = "0.10"
bevy_egui = "0.20.0"
smooth-bevy-cameras = "0.8.0"
path-absolutize = "3.0.14"
rfd = "0.11.2"
dslcad = { path = "../dslcad" }
notify = "5.0.0-pre.15"
bevy_polyline = { git = "https://github.com/Aceeri/bevy_polyline.git" }
bevy_points = "0.2"
