[package]
name = "dslcad_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4", features = [ "derive" ]}
dslcad = { path = "../dslcad" }
dslcad_parser = { path = "../dslcad_parser" }
dslcad_api = { path = "../dslcad_api" }
