[package]
name = "dslcad-occt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1"
opencascade-sys = { git = "https://github.com/dschroer/opencascade-rs", rev="7e7b8a", features = [ "builtin" ] }
log = "0.4"
