[package]
name = "dslcad-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
bincode = "1.3.3"
thiserror = "2.0"