[package]
name = "dslcad-viewer"
version = "0.0.5"
edition = "2021"

[dependencies]
strum = "0.26.3"
strum_macros = "0.26.4"
bevy_egui = "0.31.1"
smooth-bevy-cameras = "0.13.0"
bevy_polyline = "0.11.0"
bevy_points = "0.7.0"
dslcad-storage = { path = "../dslcad_storage" }
rand = "0.9.0"
simple-home-dir = "0.4.6"

[dependencies.bevy]
version = "0.15.1"
default-features = false
features = ["bevy_winit", "x11", "ktx2", "zstd", "tonemapping_luts", "webgl2"]