[package]
name = "opencascade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1"
opencascade-sys = { git = "https://github.com/dschroer/opencascade-rs", rev="c781ec414d68b2d6cc884f50039efa637b26e80e" }
log = "0.4"
