[package]
name = "opencascade_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
occt-sys = { git = "https://github.com/dschroer/opencascade-rs", rev="daf12ee4a1ffb4d808c7601780773be6c0c8b8d1" }

